# hnbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN_DOC.md  Dockerfile  MEMORY.md  README.md  TASTE.md  compose.yaml  hnrss.json  justfile  pyproject.toml  rust-toolchain.toml  tombi.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  cron.yml
docs/plans/: 2026-07-18_runtime-log-remediation-plan.md  2026-07-18_rust-rewrite-plan.md
docs/plans/archived/: 2026-06-08_retry-mechanism-plan.md  2026-07-18_dead-artifacts-cleanup-plan.md  2026-07-18_dependency-cleanup-plan.md  2026-07-18_hnbot-compose-plan.md  2026-07-18_hnbot-serve-plan.md  2026-07-18_python-removal-plan.md  2026-07-18_service-only-cli-plan.md  2026-07-18_source-edge-case-audit-plan.md
scripts/: example.py  validate_rss_datetime.py
src/: app.rs  article.rs  cli.rs  config.rs  content.rs  http.rs  lib.rs  main.rs  openai.rs  rss.rs  store.rs  telegram.rs  telegraph.rs
src/app/: tests.rs
src/hnbot/: app.py  article.py  cli.py  http_pacing.py  http_retry.py  lazy.py  llm.py  page.py  rss.py  settings.py  utils.py
tests/: cli.rs  contracts.rs  service.rs  test_app.py  test_article.py  test_cli.py  test_contracts.py  test_http_pacing.py  test_http_retry.py  test_lazy.py  test_rss.py  test_settings.py  test_utils.py
tests/contracts/: parity.json
tests/data/: sample_rss.xml
