[package]
name         = "hnbot"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
publish      = false

[dependencies]
async-trait        = "0.1"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5", features = ["derive"] }
dotenvy            = "0.15"
feed-rs            = "2.3"
futures            = "0.3"
html-escape        = "0.2"
html2md            = "0.2"
html5ever          = "0.35"
httpdate           = "1.0"
markup5ever_rcdom  = "0.35"
rand               = "0.9"
redis              = { version = "1.4", features = [
  "connection-manager",
  "tokio-comp"
] }
regex              = "1.11"
reqwest            = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
schemars           = "1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
thiserror          = "2.0"
tokio              = { version = "1.46", features = ["full", "test-util"] }
tokio-util         = "0.7"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url                = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile   = "3.20"
wiremock   = "0.6"

[lints.clippy]
all = "deny"

[lints.rust]
unsafe_code = "forbid"
